got custom local cluster with java 20 and virtual threading